objects/Leads_Affiliate__c.object
<CustomObject>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-New-</fullName>
                </value>
                <value>
                    <fullName>0-3000</fullName>
                </value>
                <value>
                    <fullName>1-50</fullName>
                </value>
                <value>
                    <fullName>51-500</fullName>
                </value>
                <value>
                    <fullName>501-1,000</fullName>
                </value>
                <value>
                    <fullName>1,001-2,000</fullName>
                </value>
                <value>
                    <fullName>3000+</fullName>
                </value>
                <value>
                    <fullName>2,001-10,000</fullName>
                </value>
                <value>
                    <fullName>Over 10,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Mailer</fullName>
                </value>
                <value>
                    <fullName>Email Marketer</fullName>
                </value>
                <value>
                    <fullName>Email Service Provider</fullName>
                </value>
                <value>
                    <fullName>Internet Service Provider</fullName>
                </value>
                <value>
                    <fullName>Non-profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secure Computing</fullName>
                </value>
                <value>
                    <fullName>Proofpoint</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Barracuda</fullName>
                </value>
                <value>
                    <fullName>MessageLabs</fullName>
                </value>
                <value>
                    <fullName>BlueCoat</fullName>
                </value>
                <value>
                    <fullName>Postini</fullName>
                </value>
                <value>
                    <fullName>Mirapoint</fullName>
                </value>
                <value>
                    <fullName>Trend Micro</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>Websense</fullName>
                </value>
                <value>
                    <fullName>Zscaler</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_AS_Policy_Mgr__c</fullName>
        <label>Current AS/Policy Mgr</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActiveState</fullName>
                </value>
                <value>
                    <fullName>Brightmail</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Cloudmark</fullName>
                </value>
                <value>
                    <fullName>Frontbridge-Outsourced</fullName>
                </value>
                <value>
                    <fullName>MailMarshall</fullName>
                </value>
                <value>
                    <fullName>MailSweeper</fullName>
                </value>
                <value>
                    <fullName>MessageLabs-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Mirapoint</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Outsourced</fullName>
                </value>
                <value>
                    <fullName>Postini-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Sendmail (SMI)</fullName>
                </value>
                <value>
                    <fullName>SpamAssassin</fullName>
                </value>
                <value>
                    <fullName>SurfControl</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Trend IMS</fullName>
                </value>
                <value>
                    <fullName>Tumbleweed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Gateway_AV_AS__c</fullName>
        <label>Current Gateway AV/AS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trend</fullName>
                </value>
                <value>
                    <fullName>McAfee</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>ActiveState</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Sophos</fullName>
                </value>
                <value>
                    <fullName>Sybari/Antigen</fullName>
                </value>
                <value>
                    <fullName>Mirapoint</fullName>
                </value>
                <value>
                    <fullName>MailMarshall</fullName>
                </value>
                <value>
                    <fullName>Mailsweeper/MIMESweeper</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Surf Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_MTA__c</fullName>
        <label>Current MTA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sendmail</fullName>
                </value>
                <value>
                    <fullName>qMail</fullName>
                </value>
                <value>
                    <fullName>Postfix</fullName>
                </value>
                <value>
                    <fullName>Exchange IIS/IMS</fullName>
                </value>
                <value>
                    <fullName>Mirapoint</fullName>
                </value>
                <value>
                    <fullName>Sun iPlanet</fullName>
                </value>
                <value>
                    <fullName>ActiveState</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CipherTrust</fullName>
                </value>
                <value>
                    <fullName>Netscape</fullName>
                </value>
                <value>
                    <fullName>Tumbleweed</fullName>
                </value>
                <value>
                    <fullName>Critical Path</fullName>
                </value>
                <value>
                    <fullName>Frontbridge-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Message Labs-Outsourced</fullName>
                </value>
                <value>
                    <fullName>Openwave</fullName>
                </value>
                <value>
                    <fullName>Post.Office</fullName>
                </value>
                <value>
                    <fullName>Postini-Outsourced</fullName>
                </value>
                <value>
                    <fullName>sendmail os</fullName>
                </value>
                <value>
                    <fullName>Z-Other Outsourced</fullName>
                </value>
                <value>
                    <fullName>Clearswift</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Web_Users__c</fullName>
        <label>Email/Web Users</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-150</fullName>
                </value>
                <value>
                    <fullName>1-250</fullName>
                </value>
                <value>
                    <fullName>251-500</fullName>
                </value>
                <value>
                    <fullName>151-500</fullName>
                </value>
                <value>
                    <fullName>501-2000</fullName>
                </value>
                <value>
                    <fullName>2001-3500</fullName>
                </value>
                <value>
                    <fullName>3501-5000</fullName>
                </value>
                <value>
                    <fullName>5001-7000</fullName>
                </value>
                <value>
                    <fullName>7001-10,000</fullName>
                </value>
                <value>
                    <fullName>10,000+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Potential__c</fullName>
        <label>Lead Potential</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>A - HOT &lt; 30 days</fullName>
                </value>
                <value>
                    <fullName>B - &lt; 90 days</fullName>
                </value>
                <value>
                    <fullName>C - 90-120 days</fullName>
                </value>
                <value>
                    <fullName>Closed - No Opportunity</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco Employee Registration</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Cisco ISAM Employee Registration</fullName>
                </value>
                <value>
                    <fullName>Existing Customer</fullName>
                </value>
                <value>
                    <fullName>Imported Leads: Sales Reps</fullName>
                </value>
                <value>
                    <fullName>Inside Sales</fullName>
                </value>
                <value>
                    <fullName>IronPort</fullName>
                </value>
                <value>
                    <fullName>Online Event</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Seminar : Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads Affiliates</relationshipLabel>
        <relationshipName>Leads_Affiliates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specific_Lead_Source__c</fullName>
        <label>Specific Lead Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This Object is created to store additional information from Acquisition instances of Salesforce.com</description>
    <label>Leads Affiliate</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Leads Affiliate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads Affiliates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>